--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "author": "Felix Geisendörfer <felix@debuggable.com> (http://debuggable.com/)",
-  "name": "form-data",
-  "description": "A library to create readable \"multipart/form-data\" streams. Can be used to submit forms and file uploads to other web applications.",
-  "version": "4.0.1",
+  "author": "PREM BABU",
+  "name": "prem-form-data",
+  "description": "THIS PROJECT IS MADE BY MR PREM BABU",
+  "version": "5.0.0",
   "repository": {
     "type": "git",
     "url": "git://github.com/form-data/form-data.git"
